--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div>
         <h2 class="fw-bold">Did you know?</h2>
         <p class="pt-2 pb-5 fs-6">We’ve been really busy this year solving problems students are facing across the country.</p>
-        <div class="border border-2 border-danger"></div>
+        <div class="border border-2 border-sucess"></div>
       </div>
       <div class="row mt-5 mx-sm-auto">
         <div class="col-md-3 col-6">
@@ -105,8 +105,8 @@
       </div>
     </section>
 
-    <section class="container mx-auto mt-5">
-      <div class="row d-flex gap-5 align-items-center justify-content-between">
+    <section class="container mx-auto mt-4">
+      <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col">
             <h2 class="fw-bold">Discover Your Skills</h2>
             <p class="fs-6 text-secondary my-3">Uncover skills developed through your  life and work experiences. 
@@ -121,23 +121,23 @@
       </div>
     </section>
 
-    <section class="container mx-auto mt-5">
-      <div class="row d-flex gap-5 align-items-center justify-content-between">
+    <section class="container mx-auto mt-4">
+      <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col-md-6 col-12">
-           <img src="./images/Live.png" alt="" class="w-100">
+           <img src="./images/Collobarte.png" alt="" class="w-100">
           </div>
           <div class="col">
-            <h2 class="fw-bold">Land Your Career </h2>
-            <p class="fs-6 text-secondary my-3">Bringing  bespoke job opportunties based on your set of skills.  </p>
+            <h2 class="fw-bold">Develop Commercial Awareness  </h2>
+            <p class="fs-6 text-secondary my-3">Fast track your career growth by developing meaningful connections. </p>
             <div class="d-flex gap-4">
-              Interested? 🖐🤞
+              <button class="bg-danger px-3 py-2 rounded text-light fw-bold">Register Interest</button>
             </div>
           </div>
        </div>
     </section>
 
-    <section class="container mx-auto mt-5">
-      <div class="row d-flex gap-5 align-items-center justify-content-between">
+    <section class="container mx-auto mt-4">
+      <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col">
             <h2 class="fw-bold">Become Job Ready</h2>
             <p class="fs-6 text-secondary my-3">Upskill and broaden your employability skills to an in-demand career.</p>
@@ -151,8 +151,8 @@
        </div>
     </section>
 
-    <section class="container mx-auto mt-5">
-      <div class="row d-flex gap-5 align-items-center justify-content-between">
+    <section class="container mx-auto mt-4">
+      <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col-md-6 col-12">
            <img src="./images/Collobarte.png" alt="" class="w-100">
           </div>
@@ -166,8 +166,8 @@
        </div>
     </section>
 
-    <section class="container mx-auto mt-5">
-      <div class="row d-flex gap-5 align-items-center justify-content-between">
+    <section class="container mx-auto mt-4">
+      <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col">
             <h2 class="fw-bold">Tailor-made CV</h2>
             <p class="fs-6 text-secondary my-3">Curate your CV personalised to your  Ideal Job Role. </p>
@@ -181,8 +181,8 @@
        </div>
     </section>
 
-    <section class="container mx-auto mt-5">
-      <div class="row d-flex gap-5 align-items-center justify-content-between">
+    <section class="container mx-auto mt-4">
+      <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col-md-6 col-12">
            <img src="./images/Live.png" alt="" class="w-100">
           </div>
@@ -195,7 +195,95 @@
           </div>
        </div>
     </section>
+
+    <section class="mt-5 position-relative ">
+      <div class="container mx-auto">
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <div>
+          <h3 class="fw-semibold mb-2">Our customers keep talking</h3>
+          <p class="text-secondary">Listen to what they say about our product offering right here</p>
+        </div>
+         <button class="bg-danger px-3 py-2 rounded text-light fw-bold">Join the conversation</button>
+      </div>
+
+      <div class="d-flex flex-column flex-md-row  mt-3 align-items-center justify-content-between">
+        <div class="p-4 bg-white rounded-5">
+          <img src="./images/icon.png" alt="" class="mb-3">
+          <p>To be able to connect with, and be exposed to other people with other skills and different ideas is the starting point of creating something new </p>
+          <h5 class="fw-bold mt-3" >Ossian Radovini</h5>
+          <p class="text-secondary fs-6">Student at  Bath Spa University </p>
+        </div>
+        <div class="p-4 bg-white rounded-5">
+          <img src="./images/icon.png" alt="" class="mb-3"> 
+          <p>To be able to connect with, and be exposed to other people with other skills and different ideas is the starting point of creating something new </p>
+          <h5 class="fw-bold mt-3">Camerson Montrose</h5>
+          <p class="text-secondary fs-6">Student at  Bath Spa University </p>
+        </div>
+        <div class="p-4 bg-white rounded-5">
+          <img src="./images/icon.png" alt="" class="mb-3">
+          <p>To be able to connect with, and be exposed to other people with other skills and different ideas is the starting point of creating something new </p>
+          <h5 class="fw-bold mt-3">Charlie Jones</h5>
+          <p class="text-secondary fs-6">Student at  Bath Spa University </p>
+        </div>
+      </div>
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <div class="container mx-auto d-flex flex-column flex-md-row justify-content-between">
+      <div class="row">
+      <div class="col-md-6 col-lg-4 mb-4">
+        <img src="./images/logo.png" alt="">
+        <p class="pt-3 fw-bold">Level39 <br>
+        One Canada Square, <br>
+        Canary Wharf, <br>
+      </div>
+      </div>
+
+    <div class="col-lg-2 col-md-6 mb-4">
+      <h5 class="fw-bold">Home</h5>
+      <ul class="list-unstyled mb-0">
+        <li>Collaborations</li>
+        <li>Statistics</li>
+        <li>How It Works </li>
+        <li>Testimonials </li>
+      </ul>
+    </div>
+    <div class="col-lg-2 col-md-6 mb-4">
+      <h5 class="fw-bold">About us</h5>
+      <ul class="list-unstyled mb-0">
+        <li>Collaborations</li>
+        <li>Statistics</li>
+        <li>How It Works </li>
+        <li>Testimonials </li>
+      </ul>
+    </div>
+    <div class="col-lg-2 col-md-6 mb-4">
+      <h5 class="fw-bold">Up skill</h5>
+      <ul class="list-unstyled mb-0">
+        <li>Collaborations</li>
+        <li>Statistics</li>
+        <li>How It Works </li>
+        <li>Testimonials </li>
+      </ul>
+    </div>
+    <div class="col-lg-2 col-md-6 mb-4">
+      <h5 class="fw-bold">Contact us</h5>
+      <ul class="list-unstyled mb-0">
+        <li>Collaborations</li>
+        <li>Statistics</li>
+        <li>How It Works </li>
+        <li>Testimonials </li>
+      </ul>
+    </div>
+    </div>
+
+    <div class="text-center">
+      <hr>
+      <p class="text-secondary">Copyright 2022 Creatives For You LTD</p>
+    </div>
+  </footer>
   <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
