--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
     </section>
 
-    <section class="container mx-auto mt-4">
+    <section class="container mx-auto mt-5">
       <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col">
             <h2 class="fw-bold">Discover Your Skills</h2>
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <section class="container mx-auto mt-4">
+    <section class="container mx-auto mt-5">
       <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col-md-6 col-12">
            <img src="./images/Collobarte.png" alt="" class="w-100">
@@ -136,7 +136,7 @@
        </div>
     </section>
 
-    <section class="container mx-auto mt-4">
+    <section class="container mx-auto mt-5">
       <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col">
             <h2 class="fw-bold">Become Job Ready</h2>
@@ -151,7 +151,7 @@
        </div>
     </section>
 
-    <section class="container mx-auto mt-4">
+    <section class="container mx-auto mt-5">
       <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col-md-6 col-12">
            <img src="./images/Collobarte.png" alt="" class="w-100">
@@ -166,7 +166,7 @@
        </div>
     </section>
 
-    <section class="container mx-auto mt-4">
+    <section class="container mx-auto mt-5">
       <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col">
             <h2 class="fw-bold">Tailor-made CV</h2>
@@ -181,7 +181,7 @@
        </div>
     </section>
 
-    <section class="container mx-auto mt-4">
+    <section class="container mx-auto mt-5">
       <div class="row d-flex gap-5 gap-md-0 align-items-center justify-content-between">
           <div class="col-md-6 col-12">
            <img src="./images/Live.png" alt="" class="w-100">
@@ -230,7 +230,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="mt-5">
     <div class="container mx-auto d-flex flex-column flex-md-row justify-content-between">
       <div class="row">
       <div class="col-md-6 col-lg-4 mb-4">
